syntax = "proto3";

package inventorypb.v1;

option go_package = "api/inventorypb;inventorypb";

// AgentStatus represents actual Agent status.
enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  // Agent is starting.
  AGENT_STATUS_STARTING = 1;
  // Agent is running.
  AGENT_STATUS_RUNNING = 2;
  // Agent encountered error and will be restarted automatically soon.
  AGENT_STATUS_WAITING = 3;
  // Agent is stopping.
  AGENT_STATUS_STOPPING = 4;
  // Agent finished.
  AGENT_STATUS_DONE = 5;
  // Agent is not connected, we don't know anything about it's state.
  AGENT_STATUS_UNKNOWN = 6;
}
